# bola

./: CMakeLists.txt  EulerAngles.ino  ICMReader.ino  Makefile  README.md  ReactionWheel.ino  bmp5_esp32_test.ino  bola.ino  constants.h  landing.cpp  main.cpp  nopotentiometermotortest.ino  sensor_reader.cpp  servoControl.ino  strong_step_test_force.h  test.cpp
.github/workflows/: raspberry-pi-emulation.yml
Bluetooth/Bluetooth/: Bluetooth.ino
EulerAngles/: EulerAngles.ino
GauchoRocketProject - ICM_20948_Euler/ICM_20948_Euler.ino/: ICM_20948_Euler.ino.ino
GauchoRocketProject - Mini_MG90S_Servo_Tests/Mini_MG90S_servo_test/: Mini_MG90S_servo_test.ino
GauchoRocketProject - Mini_MG90S_Servo_Tests/Mini_Servo_Fastest_MG90S/: Mini_Servo_Fastest_MG90S.ino
GauchoRocketProject - Motor_Wheel_Calibration_and_Testing/Motor_Wheel_Calibration_and_Testing/: Motor_Wheel_Calibration_and_Testing.ino
ICMReader/: imu_data.cpp  imu_data.h
Motor_Wheel_Calibration_and_Testing/: Motor_Wheel_Calibration_and_Testing.ino
ReactionWheel/: ReactionWheel.ino  newRW.ino
StateMachine/: StateMachine.ino
bola/: bola.ino
include/: BMP_390.h  ICM20948.h  ICM_20948.h  bmp5.c  constants.h  imu_data.h  kalmanfilter.h  led.h  logger.h  motor.h  pwm.h  pyro.h  servo.h  setup.h  statemachine.h  util.h  wiringPiTest.h
include/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  SuperLUSupport  UmfPackSupport
include/Eigen/src/Core/util/: Memory.h
nopotentiometermotortest/: nopotentiometermotortest.ino
servoControl/: constant_force.h  fast_sinusoidal_force.h  servoControl.ino  sinusoidal_force.h  slow_sinusoidal_force.h  strong_step_test_force.h  weak_step_test_force.h
src/: BMP_390.c  ICM20948.cpp  ICM_20948.cpp  bridge.cpp  forwardeuler.cpp  kalmanfilter.cpp  led.cpp  logger.cpp  main.cpp  motor.cpp  pwm.cpp  pyro.cpp  servo.cpp  setup.cpp  statemachine.cpp  test.cpp  tvc.cpp  util.cpp  wiringPiTest.cpp
testFlash/: strong_step_test_force.h  testFlash.ino
testFlash/data/: constant_force.csv  constant_force.h  fast_sinusoidal_force.h  force_float_parser.py  no_force.csv  no_force.h  parser.py  sinusoidal_force.h  slow_sinusoidal_force.csv  slow_sinusoidal_force.h  ss.csv  strong_step_test_force.h  test.csv  test.numbers  test2.csv  weak_step_test_force.csv
testFlash/original csvs/: fd.csv
utils/: ICM_20948_C.c
works/: works.ino
